# fin_web

./: .gitignore  index.html  privacy.html
backend/contact-worker/: .dev.vars.example  Cargo.toml  wrangler.toml
backend/contact-worker-old/: .env.example  .gitignore  Cargo.toml  README.md  wrangler.toml
backend/contact-worker-old/src/: lib.rs
backend/contact-worker/src/: lib.rs
css/: style.css
js/: main.js
